--- a/indico/modules/categories/templates/display/event_list.html
+++ b/indico/modules/categories/templates/display/event_list.html
@@ -1,6 +1,6 @@
 {% from 'message_box.html' import message_box %}
 
-{% macro _hidden_events_block(class, category, events_by_month, format_event_date, is_recent, happening_now,
+{% macro _hidden_events_block(class, category, events_by_month, format_skeleton, is_recent, happening_now,
                              before=none, after=none, message_first=true) %}
     {% set message=caller() %}
     {% macro render_message() %}
@@ -25,7 +25,7 @@
              {% if after %}data-event-list-after="{{ after }}"{% endif %}
              {% if before %}data-event-list-before="{{ before }}"{% endif %}>
             {%- if events_by_month -%}
-                {{ event_list_block(events_by_month, format_event_date, is_recent, happening_now) }}
+                {{ event_list_block(events_by_month, format_skeleton, is_recent, happening_now) }}
             {%- endif -%}
         </div>
     {% endmacro %}
@@ -41,7 +41,7 @@
     </div>
 {% endmacro %}
 
-{% macro event_list(events_by_month, format_event_date, is_recent, happening_now, category, future_event_count,
+{% macro event_list(events_by_month, format_skeleton, is_recent, happening_now, category, future_event_count,
                     past_event_count, future_threshold, past_threshold, future_events_by_month=[],
                     past_events_by_month=[], show_future_events=false, show_past_events=false,
                     has_hidden_events=false, is_flat=false, request_params={}) %}
@@ -70,7 +70,7 @@
             {% endcall %}
         {% endif %}
         <div>
-            {{ event_list_block(events_by_month, format_event_date, is_recent, happening_now) }}
+            {{ event_list_block(events_by_month, format_skeleton, is_recent, happening_now) }}
         </div>
         {% if past_event_count %}
             {% call _hidden_events_block('past-events', category, past_events_by_month, format_event_date, is_recent,
@@ -91,24 +91,32 @@
     </script>
 {% endmacro %}
 
-{% macro event_list_block(events_by_month, format_event_date, is_recent, happening_now) %}
+{% macro event_list_block(events_by_month, format_skeleton, is_recent, happening_now) %}
     {% for month in events_by_month %}
-        <h4 class="{% if month.is_current %}current-month{% endif %}">
+        <h4 class="ui header {% if month.is_current %}blue{% endif %}">
             <span>{{ month.name }}</span>
         </h4>
         <ul>
             {% for event in month.events %}
                 {% set is_lecture = (event.type == 'lecture') %}
+                {% set is_favorite = session.user and event in session.user.favorite_events %}
+                {% set is_happening_now = happening_now(event) %}
                 <li>
-                    <span class="event-icons">
-                        <a class="icon-calendar" href="{{ url_for('events.export_event_ical', event) }}" title="{% trans %}Export{% endtrans %}"></a>
-                        {% if session.user and event in session.user.favorite_events %}
-                            <i class="icon-star" title="{% trans %}You have favorited this event.{% endtrans %}"></i>
-                        {% endif %}
-                    </span>
                     <span class="list-name">
-                        <span class="date {% if happening_now(event) %}today{% endif %}">
-                            {{ format_event_date(event) }}
+                        <span class="ui large horizontal label {% if is_happening_now %}inverted blue{% elif is_favorite %}basic orange{% endif %}">
+                            <a href="{{ url_for('events.export_event_ical', event) }}" title="{% trans %}Export{% endtrans %}">
+                                <i class="ui icon {% if is_favorite %}white star{% elif is_happening_now %}white calendar alternate outline{% else %}calendar alternate outline{% endif %}"></i>
+                            </a>
+                            {{ format_skeleton(event.start_dt) }}
+                            {% if event.start_dt.date() != event.end_dt.date() %}
+                                <span class="detail">
+                                    {% trans count=(event.end_dt.date() - event.start_dt.date()).days -%}
+                                        1 day
+                                    {%- pluralize -%}
+                                        {{ count }} days
+                                    {%- endtrans %}
+                                </span>
+                            {% endif %}
                         </span>
                         <div class="event-title">
                             <a href="{{ event.url }}">
@@ -122,7 +130,7 @@
                                     </span>
                                 {% endif %}
                                 {% if event.is_self_protected %}
-                                    <span class="icon-shield" data-type="restricted" title="{% trans %}Protected{% endtrans %}"></span>
+                                    <i class="ui circular inverted icon shield red" title="{% trans %}Protected{% endtrans %}"></i>
                                 {% endif %}
 
                                 {% if is_recent(event.created_dt) %}
