--- a/indico/web/client/styles/modules/_category.scss
+++ b/indico/web/client/styles/modules/_category.scss
@@ -343,8 +343,7 @@ ul.category-resource-qtip {
     color: #555;
     font-weight: normal;
     font-size: 18px;
-    margin-top: 20px;
-    margin-left: 40px;
+    margin-top: 1em;
     padding: 0;
     border-bottom: 1px solid #ebebeb;
 
@@ -369,7 +368,7 @@ ul.category-resource-qtip {
   }
 
   li {
-    margin: 0 0 10px 60px;
+    margin: 0 0 1em 0;
     padding: 0;
     display: flex;
     align-items: baseline;
@@ -377,6 +376,15 @@ ul.category-resource-qtip {
     .list-name {
       display: flex;
       align-items: baseline;
+
+      .event-title a {
+        font-size: 1.2em;
+        font-family: 'Muli', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+      }
+
+      .ui.horizontal.label {
+        min-width: 12em;
+      }
     }
 
     .date {
@@ -401,10 +409,6 @@ ul.category-resource-qtip {
       }
     }
 
-    .list-name a {
-      font-size: 17px;
-    }
-
     .today {
       font-size: 13px;
       color: #444;
@@ -415,10 +419,6 @@ ul.category-resource-qtip {
     .protected {
       font-weight: normal;
       color: $dark-gray;
-    }
-
-    .ui.label {
-      text-transform: uppercase;
     }
   }
 }
