A couple of fixes in button sizing

--- a/indico/modules/events/templates/display/common/_manage_button.html
+++ b/indico/modules/events/templates/display/common/_manage_button.html
@@ -115,7 +115,7 @@
         {% set dropdown_options = item.get_manage_button_options(note_may_exist=show_note_operations) %}
         {% if dropdown_options %}
             <div class="group manage-button">
-                <button class="tiny compact ui icon button js-dropdown" style="white-space: nowrap;" data-toggle="dropdown" title="{% trans %}Manage{% endtrans %}">
+                <button class="ui mini icon button js-dropdown" style="white-space: nowrap;" data-toggle="dropdown" title="{% trans %}Manage{% endtrans %}">
                     <i class="edit icon"></i>
                     <i class="caret down icon"></i>
                 </button>
