--- a/indico/modules/vc/templates/manage_event_select.html
+++ b/indico/modules/vc/templates/manage_event_select.html
@@ -16,7 +16,7 @@
                data-reload-after>
                 <div class="i-badge-content">
                     <span class="i-badge-img">
-                        <img src="{{ plugin.logo_url }}">
+                        <img src="{{ plugin.icon_url }}">
                     </span>
                     <span class="i-badge-title">{{ plugin.title }}</span>
                 </div>
