--- a/indico/modules/vc/templates/vc_room_timetable_buttons.html
+++ b/indico/modules/vc/templates/vc_room_timetable_buttons.html
@@ -1,11 +1,13 @@
 {% set vc_room = event_vc_room.vc_room %}
 {% set plugin = vc_room.plugin %}
 
-<div class="toolbar right vc-toolbar">
-    <div class="group">
-        <span class="i-button i-button-small label vc-room-info" id="vc-room-{{ event_vc_room.id }}"><img src="{{ vc_room.plugin.icon_url }}" style="width: 18px;"></span>
-        {% block buttons %}{% endblock %}
-    </div>
+<div class="right vc-toolbar">
+    <span class="ui basic icon label vc-room-info" id="vc-room-{{ event_vc_room.id }}">
+        <img src="{{ vc_room.plugin.icon_url }}">
+    </span>
+
+    {% block buttons %}{% endblock %}
+
     {{ template_hook('event-timetable-vc-extra-buttons', event_vc_room=event_vc_room) }}
 </div>
 <div style="display: none;">
@@ -14,7 +16,7 @@
 <script>
     $('#vc-room-{{ event_vc_room.id }}').qtip({
         content: {
-            text: $('#vc-room-{{ event_vc_room.id }}').closest('.toolbar.right.vc-toolbar').next('div')
+            text: $('#vc-room-{{ event_vc_room.id }}').closest('.right.vc-toolbar').next('div')
         },
         position: {
             my: 'top middle',
